fix: Lowers banner-title in the stacking order
Attributes to the paragraph with class "banner-title" a z-index of -1
so that it stops overlapping social media links.

--- a/style.css
+++ b/style.css
@@ -84,6 +84,18 @@ section {
   font: 300 16px / normal "Spartan", "Courier New", Courier, monospace;
 }
 
+.about-me > .banner-info {
+  position: absolute;
+  bottom: 5px;
+  right: 5px;
+  opacity: 0.5;
+  transition: opacity 400ms;
+}
+
+.about-me > .banner-info:hover {
+  opacity: 1;
+}
+
 .about-me > .banner {
   position: absolute;
   top: 0;
@@ -98,7 +110,7 @@ section {
   transition: opacity 1s ease;
 }
 
-.banner-info:hover + .banner-title + .banner {
+.banner-info:hover + .banner {
   opacity: 0.8;
 }
 
@@ -107,6 +119,7 @@ section {
   position: absolute;
   bottom: 5px;
   left: 20px;
+  z-index: -1;
   font-size: 1rem;
   line-height: 1.5rem;
   background: #fdf0e3;
@@ -114,20 +127,12 @@ section {
   transition: opacity 400ms ease;
 }
 
-.banner-info:hover + .banner-title {
+.banner-info:hover + .banner + .banner-title {
   opacity: 0.8;
 }
 
-.about-me .banner-info {
-  position: absolute;
-  bottom: 5px;
-  right: 5px;
-  opacity: 0.5;
-  transition: opacity 400ms;
-}
-
-.about-me .banner-info:hover {
-  opacity: 1;
+.banner-info:hover + .banner + .banner-title + .info {
+  opacity: 0;
 }
 
 .about-me .name {
